added texrarea and save function

--- a/index.html
+++ b/index.html
@@ -30,9 +30,21 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row mt-1">
+          <span id="time-slot" class="col-2 border-top border-primary" name="9"></span>
+          <form id="form" class="mt-0 col-8 border border-primary">
+            <textarea class=" border border-primary h-100' name="timeslot" id="textarea" cols="50" rows="2"></textarea>
+          </form>
+          <button class="col-2 border border-primary">save</button>
+      </div>
+      
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/script.js"></script>
   </body>
