added button values

--- a/index.html
+++ b/index.html
@@ -31,11 +31,59 @@
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="row mt-1">
-          <span id="time-slot" class="col-2 border-top border-primary" name="9"></span>
-          <form id="form" class="mt-0 col-8 border border-primary">
-            <textarea class=" border border-primary h-100' name="timeslot" id="textarea" cols="50" rows="2"></textarea>
+          <span id="form" class="col-2 border-top border-primary " name="9">9:00 Am</span>
+          <form id="9" class="mt-0 col-8 border border-primary saveitem" value="9">
+            <textarea class=" text-white border border-primary h-100' name=" id="textarea" cols="50" rows="2"></textarea>
           </form>
-          <button class="col-2 border border-primary">save</button>
+          <button value="9" class="savebtn col-2 border border-primary">save</button>
+
+          <span id="form" class="col-2 border-top border-primary " name="10">10:00 Am</span>
+          <form id="10" class="mt-0 col-8 border border-primary saveitem">
+            <textarea class=" text-white border border-primary h-100' name=" id="textarea" cols="50" rows="2"></textarea>
+          </form>
+          <button value="10" class=" savebtn col-2 border border-primary">save</button>
+
+          <span id="form" class="col-2 border-top border-primary " name="10">11:00 Am</span>
+          <form id="11" class="mt-0 col-8 border border-primary saveitem">
+            <textarea class=" text-white border border-primary h-100' name=" id="textarea" cols="50" rows="2"></textarea>
+          </form>
+          <button value="11" class="savebtn col-2 border border-primary">save</button>
+
+          <span id="form" class="col-2 border-top border-primary " name="10">12:00 Pm</span>
+          <form id="12" class="mt-0 col-8 border border-primary saveitem">
+            <textarea class=" text-white border border-primary h-100' name=" id="textarea" cols="50" rows="2"></textarea>
+          </form>
+          <button value="12" class="savebtn col-2 border border-primary">save</button>
+
+          <span id="form" class="col-2 border-top border-primary " name="10">1:00 Pm</span>
+          <form id="13" class="mt-0 col-8 border border-primary saveitem">
+            <textarea class=" text-white border border-primary h-100' name=" id="textarea" cols="50" rows="2"></textarea>
+          </form>
+          <button value="13" class="savebtn col-2 border border-primary">save</button>
+
+          <span id="form" class="col-2 border-top border-primary " name="10">2:00 Pm</span>
+          <form id="14" class="mt-0 col-8 border border-primary saveitem">
+            <textarea class=" text-white border border-primary h-100' name=" id="textarea" cols="50" rows="2"></textarea>
+          </form>
+          <button value="14" class="savebtn col-2 border border-primary">save</button>
+
+          <span id="form" class="col-2 border-top border-primary " name="10">3:00 Pm</span>
+          <form id="15" class="mt-0 col-8 border border-primary saveitem">
+            <textarea class=" text-white border border-primary h-100' name=" id="textarea" cols="50" rows="2"></textarea>
+          </form>
+          <button value="15" class="savebtn col-2 border border-primary">save</button>
+
+          <span id="form" class="col-2 border-top border-primary " name="10">4:00 Pm</span>
+          <form id="16" class="mt-0 col-8 border border-primary saveitem">
+            <textarea class=" text-white border border-primary h-100' name=" id="textarea" cols="50" rows="2"></textarea>
+          </form>
+          <button value="16" class="savebtn col-2 border border-primary">save</button>
+
+          <span id="form" class="col-2 border-top border-primary " name="10">5:00 Pm</span>
+          <form id="17" class="mt-0 col-8 border border-primary saveitem">
+            <textarea class=" text-white border border-primary h-100' name=" id="textarea" cols="50" rows="2"></textarea>
+          </form>
+          <button value="17" class="savebtn col-2 border border-primary">save</button>
       </div>
       
     </div>
