--- a/index.html
+++ b/index.html
@@ -32,21 +32,18 @@
       <!-- Timeblocks go here -->
       <div class="row mt-1">
           <span id="form" class="col-2 border-top border-primary " name="9">9:00 Am</span>
-          <form id="9" class="mt-0 col-8 border border-primary saveitem" value="9">
-            <textarea class=" text-white border border-primary h-100' name=" id="textarea" cols="50" rows="2"></textarea>
-          </form>
-          <button value="9" class="savebtn col-2 border border-primary">save</button>
+          <div value="9" id="9" class="todo mt-0 col-8 border border-primary saveitem" value="9"></div>
+          <button value="9" class="addbtn col-1 border border-primary">New</button>
+          <button value="9" class="savebtn col-1 border border-primary">Save</button>
 
           <span id="form" class="col-2 border-top border-primary " name="10">10:00 Am</span>
           <form id="10" class="mt-0 col-8 border border-primary saveitem">
             <textarea class=" text-white border border-primary h-100' name=" id="textarea" cols="50" rows="2"></textarea>
           </form>
-          <button value="10" class=" savebtn col-2 border border-primary">save</button>
+          <button value="10" class="savebtn col-2 border border-primary">save</button>
 
           <span id="form" class="col-2 border-top border-primary " name="10">11:00 Am</span>
-          <form id="11" class="mt-0 col-8 border border-primary saveitem">
-            <textarea class=" text-white border border-primary h-100' name=" id="textarea" cols="50" rows="2"></textarea>
-          </form>
+          <div id="11" class="todo11 mt-0 col-8 border border-primary saveitem"></div>
           <button value="11" class="savebtn col-2 border border-primary">save</button>
 
           <span id="form" class="col-2 border-top border-primary " name="10">12:00 Pm</span>
