--- a/index.html
+++ b/index.html
@@ -24,79 +24,90 @@
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
+      <h1 class="text-danger display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <!-- button -->
-      <div class="row m-2 h-auto">
-        <button value="9" class="addbtn col-12 border border-primary">New</button>
+
+      <!-- buttons/form -->
+      <!-- <div class="row h-auto btn-box">
+        <button value="9" class=" fs-1 addbtn col-12 border border-primary">New</button>
         <div class="todo m-1 p-1 w-100"></div>
         <button type="submit" class="savebtn col-12 border border-primary">Save</button>
-      </div>
+      </div> -->
+
       <!-- time block 9am -->
       <div class="row mt-1 h-auto">
         <span id="form" class="col-2 border-top border-primary " name="9">9:00 Am</span>
-        <div id="9" class="mt-0 col-8 border border-primary saveitem"></div>
-        <button value="9" class="savebtn col-2 border border-primary">Save</button>
+        <span id="9" class="h-auto todo-form mt-0 col-8 border border-primary saveitem" value="9"></span>
+        <button id="add" class="addbtn-9 col-1 border border-primary">Add</button>
+        <button value="9" class="savebtn col-1 border border-primary">Save</button>
       </div>
       
       <!-- time block 10am -->
       <div class="row mt-1 h-auto">
         <span id="form" class="col-2 border-top border-primary " name="9">10:00 Am</span>
-        <div id="10" class="mt-0 col-8 border border-primary saveitem"></div>
-        <button value="9" class="savebtn col-2 border border-primary">Save</button>
+        <span id="10" class="h-auto todo-form mt-0 col-8 border border-primary saveitem"></span>
+        <button id="add" class="addbtn-10 col-1 border border-primary">Add</button>
+        <button value="9" class="savebtn col-1 border border-primary">Save</button>
       </div>
 
        <!-- time block 11am -->
        <div class="row mt-1 h-auto">
         <span id="form" class="col-2 border-top border-primary " name="9">11:00 Am</span>
-        <div id="11" class="mt-0 col-8 border border-primary saveitem"></div>
-        <button value="9" class="savebtn col-2 border border-primary">Save</button>
+        <span id="11" class="h-auto todo form mt-0 col-8 border border-primary saveitem"></span>
+        <button id="add" class="addbtn-11 col-1 border border-primary">Add</button>
+        <button value="9" class="savebtn col-1 border border-primary">Save</button>
       </div>
 
       <!-- time block 12pm -->
       <div class="row mt-1 h-auto">
         <span id="form" class="col-2 border-top border-primary " name="9">12:00 Pm</span>
-        <div id="12" class="mt-0 col-8 border border-primary saveitem"></div>
-        <button value="9" class="savebtn col-2 border border-primary">Save</button>
+        <span id="12" class="h-auto todo-form mt-0 col-8 border border-primary saveitem"></span>
+        <button id="add" class="addbtn-12 col-1 border border-primary">Add</button>
+        <button value="9" class="savebtn col-1 border border-primary">Save</button>
       </div>
 
       <!-- time block 1pm -->
       <div class="row mt-1 h-auto">
         <span id="form" class="col-2 border-top border-primary " name="9">1:00 Pm</span>
-        <div id="1" class="mt-0 col-8 border border-primary saveitem"></div>
-        <button value="9" class="savebtn col-2 border border-primary">Save</button>
+        <span id="13" class="h-auto todo-form mt-0 col-8 border border-primary saveitem"></span>
+        <button id="add" class="addbtn-13 col-1 border border-primary">Add</button>
+        <button value="9" class="savebtn col-1 border border-primary">Save</button>
       </div>
 
        <!-- time block 2pm -->
        <div class="row mt-1 h-auto">
         <span id="form" class="col-2 border-top border-primary " name="9">2:00 Pm</span>
-        <div id="2" class="mt-0 col-8 border border-primary saveitem"></div>
-        <button value="9" class="savebtn col-2 border border-primary">Save</button>
+        <span id="14" class="h-auto todo-form mt-0 col-8 border border-primary saveitem"></span>
+        <button id="add" class="addbtn-14 col-1 border border-primary">Add</button>
+        <button value="9" class="savebtn col-1 border border-primary">Save</button>
       </div>
 
        <!-- time block 3pm -->
        <div class="row mt-1 h-auto">
         <span id="form" class="col-2 border-top border-primary " name="9">3:00 Pm</span>
-        <div id="3" class="mt-0 col-8 border border-primary saveitem"></div>
-        <button value="9" class="savebtn col-2 border border-primary">Save</button>
+        <span id="15" class="h-auto todo-form mt-0 col-8 border border-primary saveitem"></span>
+        <button id="add" class="addbtn-15 col-1 border border-primary">Add</button>
+        <button value="9" class="savebtn col-1 border border-primary">Save</button>
       </div>
 
        <!-- time block 4pm -->
        <div class="row mt-1 h-auto">
         <span id="form" class="col-2 border-top border-primary " name="9">4:00 Pm</span>
-        <div id="4" class="mt-0 col-8 border border-primary saveitem"></div>
-        <button value="9" class="savebtn col-2 border border-primary">Save</button>
+        <span id="16" class="h-auto todo-form mt-0 col-8 border border-primary saveitem"></span>
+        <button id="add" class="addbtn-16 col-1 border border-primary">Add</button>
+        <button value="9" class="savebtn col-1 border border-primary">Save</button>
       </div>
 
        <!-- time block 5pm -->
        <div class="row mt-1 h-auto">
         <span id="form" class="col-2 border-top border-primary " name="9">5:00 Pm</span>
-        <div id="5" class="mt-0 col-8 border border-primary saveitem"></div>
-        <button value="9" class="savebtn col-2 border border-primary">Save</button>
+        <span id="17" class="h-auto todo-form mt-0 col-8 border border-primary saveitem"></span>
+        <button id="add" class="addbtn-17 col-1 border border-primary">Add</button>
+        <button value="9" class="savebtn col-1 border border-primary">Save</button>
       </div>
 
        
